Adição da primeira parte do código no README file

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,12 @@
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from time import sleep\n",
     "import pandas as pd\n",
-    "from datetime import date"
+    "from datetime import datetime, timedelta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
     "                    datas_lista, mandante_lista, visitante_lista, rodada = [], [], [], []\n",
     "                    for partida in range(10):\n",
     "                        data = self.driver.find_element(By.XPATH,f'/html/body/div[2]/main/div[2]/div/section[1]/section/ul/li[{partida+1}]/div/a/div/div[1]/span[2]').text\n",
-    "                        datas_lista.append(date(self.ano, int(data.split('/')[-1]), int(data.split('/')[0])))\n",
+    "                        datas_lista.append(datetime(self.ano, int(data.split('/')[-1]), int(data.split('/')[0])))\n",
     "                        mandante_lista.append(self.driver.find_element(By.XPATH,f\"/html/body/div[2]/main/div[2]/div/section[1]/section/ul/li[{partida+1}]/div/a/div/div[2]/div[1]/span[1]\").get_attribute('title'))\n",
     "                        visitante_lista.append(self.driver.find_element(By.XPATH,f\"/html/body/div[2]/main/div[2]/div/section[1]/section/ul/li[{partida+1}]/div/a/div/div[2]/div[3]/span[1]\").get_attribute('title'))\n",
     "                        rodada.append(int(self.rodada_atual))\n",
@@ -102,13 +102,31 @@
     "    jogos_objeto.tabela_partidas()\n",
     "    jogos_df = jogos_objeto.tabela_partidas\n",
     "\n",
-    "    return jogos_df\n",
+    "    today = datetime(2023, 6, 6)\n",
+    "    #today = date.today()\n",
+    "\n",
+    "    proximas_partidas = jogos_df[jogos_df['Datas'] >= today]\n",
+    "    proximas_partidas = proximas_partidas[proximas_partidas['Datas']==min(proximas_partidas['Datas'])]\n",
+    "    \n",
+    "    d0 = min(proximas_partidas['Datas'])\n",
+    "    dia_analise =  datetime(d0.year, d0.month, d0.day-1, 18, 0, 0)\n",
+    "\n",
+    "    return jogos_df, proximas_partidas, dia_analise\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jogos_df, proximas_partidas, dia_analise = main(2023)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -222,60 +240,139 @@
        "</div>"
       ],
       "text/plain": [
-       "         Datas  Time Mandante Time Visitante  Rodada\n",
-       "0   2023-04-15      Palmeiras         Cuiabá     1.0\n",
-       "1   2023-04-15     América-MG     Fluminense     1.0\n",
-       "2   2023-04-15       Botafogo      São Paulo     1.0\n",
-       "3   2023-04-15     Bragantino          Bahia     1.0\n",
-       "4   2023-04-15   Athletico-PR          Goiás     1.0\n",
-       "..         ...            ...            ...     ...\n",
-       "5   2023-12-06       Cruzeiro      Palmeiras    37.0\n",
-       "6   2023-12-06  Internacional       Botafogo    37.0\n",
-       "7   2023-12-06       Coritiba    Corinthians    37.0\n",
-       "8   2023-12-06          Bahia    Atlético-MG    37.0\n",
-       "9   2023-12-06         Cuiabá   Athletico-PR    37.0\n",
+       "        Datas  Time Mandante Time Visitante  Rodada\n",
+       "0  2023-04-15      Palmeiras         Cuiabá     1.0\n",
+       "1  2023-04-15     América-MG     Fluminense     1.0\n",
+       "2  2023-04-15       Botafogo      São Paulo     1.0\n",
+       "3  2023-04-15     Bragantino          Bahia     1.0\n",
+       "4  2023-04-15   Athletico-PR          Goiás     1.0\n",
+       "..        ...            ...            ...     ...\n",
+       "5  2023-12-06       Cruzeiro      Palmeiras    37.0\n",
+       "6  2023-12-06  Internacional       Botafogo    37.0\n",
+       "7  2023-12-06       Coritiba    Corinthians    37.0\n",
+       "8  2023-12-06          Bahia    Atlético-MG    37.0\n",
+       "9  2023-12-06         Cuiabá   Athletico-PR    37.0\n",
        "\n",
        "[380 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jogos_df = main(2023)\n",
-    "\n",
     "jogos_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_teste = date(2023, 6, 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Datas</th>\n",
+       "      <th>Time Mandante</th>\n",
+       "      <th>Time Visitante</th>\n",
+       "      <th>Rodada</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-06-10</td>\n",
+       "      <td>Coritiba</td>\n",
+       "      <td>Santos</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-06-10</td>\n",
+       "      <td>Corinthians</td>\n",
+       "      <td>Cuiabá</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-06-10</td>\n",
+       "      <td>Atlético-MG</td>\n",
+       "      <td>Bragantino</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-06-10</td>\n",
+       "      <td>Bahia</td>\n",
+       "      <td>Cruzeiro</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-06-10</td>\n",
+       "      <td>Botafogo</td>\n",
+       "      <td>Fortaleza</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "datetime.date(2023, 6, 6)"
+       "       Datas Time Mandante Time Visitante  Rodada\n",
+       "0 2023-06-10      Coritiba         Santos     9.0\n",
+       "1 2023-06-10   Corinthians         Cuiabá     9.0\n",
+       "2 2023-06-10   Atlético-MG     Bragantino     9.0\n",
+       "3 2023-06-10         Bahia       Cruzeiro     9.0\n",
+       "4 2023-06-10      Botafogo      Fortaleza     9.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_teste"
+    "proximas_partidas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2023, 6, 9, 18, 0)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dia_analise"
    ]
   },
   {
@@ -290,75 +387,67 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "#entrar na página do brasileiro série A\n",
-    "opts = ChromeOptions()\n",
-    "servico=Service(ChromeDriverManager().install())\n",
-    "driver=webdriver.Chrome(service=servico, options=opts)\n",
     "\n",
-    "driver.get(\"https://ge.globo.com/futebol/brasileirao-serie-a/\")\n",
-    "\n",
-    "#input do ano \n",
-    "ano = 2023\n",
-    "\n",
-    "#definir função para aquisitar a rodada atual\n",
-    "def rodada_atual_func():\n",
-    "    try:\n",
-    "        rodada_atual = int(driver.find_element(By.XPATH,'/html/body/div[2]/main/div[2]/div/section[1]/section/nav/span[2]').text[:2])\n",
-    "    except:\n",
-    "        rodada_atual = int(driver.find_element(By.XPATH,'/html/body/div[2]/main/div[2]/div/section[1]/section/nav/span[2]').text[:1])\n",
-    "    return rodada_atual\n",
-    "\n",
-    "#retornar para a primeira rodada\n",
-    "while True:\n",
-    "    driver.find_element(By.XPATH,\"/html/body/div[2]/main/div[2]/div/section[1]/section/nav/span[1]\").click()\n",
-    "    sleep(1)\n",
-    "    rd = rodada_atual_func()\n",
-    "    if rd == 1:\n",
-    "        break\n",
-    "\n",
-    "#criar tabela de jogos com datas, times mandantes e times visitantes\n",
-    "jogos_df = pd.DataFrame({'Datas':[], 'Time Mandante': [], 'Time Visitante': []})\n",
-    "while True:\n",
-    "    datas_lista, mandante_lista, visitante_lista = [], [], []\n",
-    "    for partida in range(10):\n",
-    "        data = driver.find_element(By.XPATH,f'/html/body/div[2]/main/div[2]/div/section[1]/section/ul/li[{partida+1}]/div/a/div/div[1]/span[2]').text\n",
-    "        datas_lista.append(date(ano, int(data.split('/')[-1]), int(data.split('/')[0])))\n",
-    "        mandante_lista.append(driver.find_element(By.XPATH,f\"/html/body/div[2]/main/div[2]/div/section[1]/section/ul/li[{partida+1}]/div/a/div/div[2]/div[1]/span[1]\").get_attribute('title'))\n",
-    "        visitante_lista.append(driver.find_element(By.XPATH,f\"/html/body/div[2]/main/div[2]/div/section[1]/section/ul/li[{partida+1}]/div/a/div/div[2]/div[3]/span[1]\").get_attribute('title'))\n",
-    "\n",
-    "    df = pd.DataFrame({'Datas':datas_lista, 'Time Mandante': mandante_lista, 'Time Visitante': visitante_lista})\n",
-    "    jogos_df = pd.concat([jogos_df, df])\n",
-    "\n",
-    "    rd = rodada_atual_func()\n",
-    "    if rd == 38:\n",
-    "        break\n",
-    "    else:\n",
-    "        driver.find_element(By.XPATH,\"/html/body/div[2]/main/div[2]/div/section[1]/section/nav/span[3]\").click()\n",
-    "        sleep(1)\n",
-    "\n",
-    "jogos_df"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Datas', 'Rodada', 'Time Mandante', 'Time Visitante'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "opts = ChromeOptions()\n",
-    "#opts.add_argument(\"--headless\")\n",
-    "#opts.add_argument('--no-sandbox')\n",
-    "#opts.add_argument('--disable-dev-shm-usage')\n",
-    "servico=Service(ChromeDriverManager().install())\n",
-    "driver=webdriver.Chrome(service=servico, options=opts)\n",
-    "\n",
-    "driver.get(\"https://ge.globo.com/futebol/brasileirao-serie-a/\")\n",
-    "driver.maximize_window()\n",
-    "sleep(1)\n",
-    "\n",
-    "driver.execute_script(\"window.scrollTo(0, 500);\")\n",
-    "sleep(2)  # Wait for the page to load"
+    "len(set(jogos_df[jogos_df['Datas'] >= data_teste].head(11)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     9.0\n",
+       "1     9.0\n",
+       "2     9.0\n",
+       "3     9.0\n",
+       "4     9.0\n",
+       "5     9.0\n",
+       "6     9.0\n",
+       "7     9.0\n",
+       "8     9.0\n",
+       "9     9.0\n",
+       "0    10.0\n",
+       "Name: Rodada, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jogos_df[jogos_df['Datas'] >= data_teste].head(11)['Rodada']"
    ]
   },
   {
